--- a/project4.css
+++ b/project4.css
@@ -41,15 +41,12 @@ h2 {
 div#div_page_desc {
     margin: 10px;
 }
-
 div#div_data_desc {
     background: ivory;
     box-sizing: border-box;
     padding: 10px 20px;
-
     color: black;
 }
-
 div#div_visuals {
     background: ivory;
     background-clip: content-box;
@@ -59,11 +56,9 @@ div#div_visuals {
     box-sizing: border-box;
     padding: 10px;
 }
-
 div#div_buttons {
     padding: 20px;
 }
-
 button {
     background: beige;
     border: none;
@@ -75,17 +70,13 @@ button {
     font-size: 1em;
     letter-spacing: 0.1em;
 }
-
 button:hover {
     background: darkturquoise;
     cursor: pointer;
 }
-
 button:focus {
     outline: 0;
 }
-
-
 #vis {
     background: ivory;
     display: block;
@@ -93,10 +84,8 @@ button:focus {
     height: 100%;
     min-width: 800px;
     min-height: 500px;
-    /*box-sizing: border-box;*/
     margin: auto;
 }
-
 .domain,
 .tick,
 .tick path,
@@ -105,30 +94,25 @@ button:focus {
     stroke: black;
     shape-rendering: crispEdges;
 }
-
 .domain text,
 .tick,
 .tick text {
     font-family: "Sarabun", sans-serif;
     font-size: 1em;
 }
-
 .map{
     background: white;
 }
 svg{
     background: white;
 }
-
 body {
     margin: 0px;
     overflow: hidden;
 }
-
 .sphere {
     fill: ivory;
 }
-
 .country {
     fill: #d1d1d1;
     stroke: black;
@@ -136,4 +120,104 @@ body {
 }
 .country:hover {
     fill: #7a7a7a;
+}
+#sliderContainer {
+    font-family: "Major Mono Display", sans-serif;
+    color: black;
+    position: relative;
+    text-align:center;
+    padding-top: 10px;
+    bottom: 10px;
+    background: ivory;
+}
+input[type=range] {
+    height: 18px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 50%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #d1d1d1;
+    border-radius: 25px;
+    border: 1px solid #8A8A8A;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #828282;
+    border: 1px solid #8A8A8A;
+    height: 24px;
+    width: 35px;
+    border-radius: 6px;
+    background: #DADADA;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #B6B6B6;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #B6B6B6;
+    border-radius: 25px;
+    border: 1px solid #8A8A8A;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #828282;
+    border: 1px solid #8A8A8A;
+    height: 24px;
+    width: 35px;
+    border-radius: 6px;
+    background: #DADADA;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #B6B6B6;
+    border: 1px solid #8A8A8A;
+    border-radius: 50px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+    background: #B6B6B6;
+    border: 1px solid #8A8A8A;
+    border-radius: 50px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 1px 1px 1px #828282;
+    border: 1px solid #8A8A8A;
+    height: 24px;
+    width: 35px;
+    border-radius: 6px;
+    background: #DADADA;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #B6B6B6;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #B6B6B6;
 }
