--- a/project4.css
+++ b/project4.css
@@ -163,7 +163,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: -5px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #B6B6B6;
+    background: darkgrey;
 }
 input[type=range]::-moz-range-track {
     width: 100%;
